--- a/public/style/global.css
+++ b/public/style/global.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 * {
   box-sizing: border-box;
   margin: 0;
@@ -26,3 +30,4 @@ body {
     color: #fff;
   }
 }
+
