--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,40 +1,33 @@
 ---
-import navigation from '../data/navigation.json';
+import SocialLinks from '@components/SocialLinks'
+
+import navigation from '@data/navigation.json';
 ---
 
-<div class="navbar-container">
-	<div class="row">
-		<div class="col-10 col-md-4 mx-auto">
-		<a class="d-block mx-auto my-4" href="/">
-			<img
-			class="logo"
-			src="{ '/assets/images/logo-2021.svg' }"
+<div class="flex justify-center">
+	<a class="block mx-auto mb-4 mt-8 w-4/5 md:w-1/3" href="/">
+		<img
+			class="w-full h-full"
+			src="https://ik.imagekit.io/thegoldendino/hfw/festival/2021/logo-2021_nVNOHonr9.svg?updatedAt=1628273241588"
 			alt="HONK! Fest West"
-			/>
-		</a>
-		</div>
-	</div>
-	<nav>
-		<ul class="nav justify-content-center">
-			{navigation.main.map((item) => (
-				<>
-					<li class="nav-item">
-        				<a
-          					class="nav-link ft-fml-1 {Astro.request.url == item.link ? 'active' : ''}"
-          					href={ item.link }
-          				>{ item.name }</a>
-      				</li>
-      				<li><span class="nav-bullet">&#8226;</span></li>
-				</>
-			))}
-
-			<li class="nav-item social-links">
-				{navigation.social.map((item) => (
-					<a class="social-link" target="_blank" href={ item.link }>
-						<i class="fab { item.icon }"></i>
-					</a>
-				))}
-			</li>
-		</ul>
-	</nav>
+		/>
+	</a>
 </div>
+<nav>
+	<ul class="flex justify-center items-center">
+		{navigation.main.map((item) => (
+			<li class="nav-item">
+				<a
+					class="nav-link ft-fml-1 {Astro.request.url == item.link ? 'active' : ''}"
+					href={ item.link }
+				>{ item.name }</a>
+				<span class="nav-bullet">&#8226;</span>
+			</li>
+		))}
+		{Object.keys(navigation.social).map((item) => (
+			<li>
+				<SocialLinks link={item}/>
+			</li>
+		))}
+	</ul>
+</nav>
