--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,44 +1,32 @@
----
-import HeadGoogle from '../components/head/HeadGoogle.astro'
-import HeadMailChimp from '../components/head/HeadMailChimp.astro'
-import HeadOpenGraph from '../components/head/HeadOpenGraph.astro'
-import BackgroundImage from '../components/BackgroundImage.astro'
-import Header from '../components/Header.astro'
-import Footer from '../components/Footer.astro'
-
-const title = 'Home';
----
-
 <!DOCTYPE html>
 <html lang="en">
 
+  <!-- HEAD -->
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta
-      name="description="
-      content="HONK! Fest West is an accessible community music festival driven by the energetic performances of street bands in public spaces."
-    />
-
-    <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
-
-    <title>{ title }</title>
-
-    <HeadGoogle></HeadGoogle>
-    <HeadMailChimp></HeadMailChimp>
-    <HeadOpenGraph title={ title }></HeadOpenGraph>
+    <slot name="head" />
   </head>
 
   <body class="font-sans antialiased text-gray-600 min-h-full flex flex-col">
-    <BackgroundImage></BackgroundImage>
-    <header>
-	    <Header></Header>
+
+    <!-- BACKGROUND IMAGE -->
+    <div class="w-full h-full z-0 fixed top-0 left-0">
+	    <div class="bg-rainier bg-cover bg-center w-full h-full fixed top-0 left-0"></div>
+	    <div class="bg-background bg-opacity-60 w-full h-full fixed top-0 left-0"></div>
+    </div>
+
+    <!-- HEADER -->
+    <header class="z-10">
+	    <slot name="header" />
     </header>
-	  <main>
-		  <slot></slot>
+
+    <!-- MAIN -->
+	  <main class="z-10">
+		  <slot />
 	  </main>
-    <footer>
-	    <Footer></Footer>
+
+    <!-- FOOTER -->
+    <footer class="z-10">
+	    <slot name="footer" />
     </footer>
   </body>
 
