--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -22,4 +22,10 @@ const { title = '' } = Astro.props;
 <MailChimp />
 <OpenGraph title={ title } />
 
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap" rel="stylesheet">
+
+
+
 <slot />
