--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -10,8 +10,8 @@
 
     <!-- BACKGROUND IMAGE -->
     <div class="w-full h-full z-0 fixed top-0 left-0">
-	    <div class="bg-rainier bg-cover bg-center w-full h-full fixed top-0 left-0"></div>
-	    <div class="bg-background bg-opacity-60 w-full h-full fixed top-0 left-0"></div>
+	    <div class="bg-rainier bg-cover bg-center opacity-40 w-full h-full fixed top-0 left-0"></div>
+	    <div class="bg-background-color bg-opacity-60 w-full h-full fixed top-0 left-0"></div>
     </div>
 
     <!-- HEADER -->
