--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -2,6 +2,7 @@
 import Google from '@components/BaseHead/Google.astro'
 import MailChimp from '@components/BaseHead/MailChimp.astro'
 import OpenGraph from '@components/BaseHead/OpenGraph.astro'
+import Fonts from '@components/BaseHead/Fonts.astro'
 
 const { title = '' } = Astro.props;
 ---
@@ -18,14 +19,9 @@ const { title = '' } = Astro.props;
 
 <title>{ title }</title>
 
+<Fonts />
 <Google />
 <MailChimp />
 <OpenGraph title={ title } />
-
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap" rel="stylesheet">
-
-
 
 <slot />
