--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -5,8 +5,8 @@ import navigation from '@data/navigation.json';
 ---
 
 <!-- H!FW LOGO -->
-<div class="flex justify-center">
-	<a class="block mx-auto mb-4 mt-8 w-4/5 md:w-1/3" href="/">
+<div class="flex justify-center mt-12 mb-8">
+	<a class="block mx-auto w-4/5 md:w-1/3" href="/">
 		<img
 			class="w-full h-full"
 			src="https://ik.imagekit.io/thegoldendino/hfw/festival/2021/logo-2021_nVNOHonr9.svg?updatedAt=1628273241588"
@@ -15,23 +15,23 @@ import navigation from '@data/navigation.json';
 	</a>
 </div>
 
-<nav class="my-3">
+<nav>
 	<ul class="flex justify-center items-center">
 
 		<!-- MAIN NAV -->
 		{navigation.main.map((item) => (
-			<li class="text-3xl text-nav-color flex items-center">
+			<li class="text-3xl text-main-color-700 font-title flex items-center">
 				<a
-					class="mx-2 block font-title {Astro.request.url == item.link ? 'active' : ''}"
+					class="mx-2 block  {Astro.request.url == item.link ? 'active' : ''}"
 					href={ item.link }
 				>{ item.name }</a>
-				<span class="mx-2 block h-11">&#8226;</span>
+				<span class="mx-2 block h-9">&#8226;</span>
 			</li>
 		))}
 
 		<!-- SOCIAL NAV -->
 		{Object.keys(navigation.social).map((item) => (
-			<li class="text-2xl text-nav-color px-1 h-9">
+			<li class="text-2xl text-main-color-700 px-1 h-9">
 				<SocialLinks link={item} size="1.875rem" />
 			</li>
 		))}
