--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -11,7 +11,7 @@
     <!-- BACKGROUND IMAGE -->
     <div class="w-full h-full z-0 fixed top-0 left-0">
 	    <div class="bg-rainier bg-cover bg-center opacity-40 w-full h-full fixed top-0 left-0"></div>
-	    <div class="bg-background-color bg-opacity-60 w-full h-full fixed top-0 left-0"></div>
+	    <div class="bg-main-color-300 bg-opacity-60 w-full h-full fixed top-0 left-0"></div>
     </div>
 
     <!-- HEADER -->
@@ -20,7 +20,7 @@
     </header>
 
     <!-- MAIN -->
-	  <main class="z-10">
+	  <main class="z-10 max-w-screen-lg my-8 w-full mx-auto">
 		  <slot />
 	  </main>
 
