--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,7 +10,81 @@ const title = 'Home';
 <BaseLayout>
   <Head slot="head" title={title} />
   <Header slot="header" />
-  <h1>Test this home page</h1>
+  <div class="grid grid-cols-6 gap-4 w-full">
+
+    <!-- INFO BLOCK -->
+    <div class="col-span-3 bg-white bg-opacity-40 p-5 rounded">
+      <div class="flex flex-col items-center text-4xl font-emphasis font-medium tracking-wide">
+        <span class="block  text-title-primary-color mb-1">
+          HONK! FEST WEST
+        </span>
+        <span class="block text-link-color mb-2 tracking-normal">
+          SAVE THE DATE » <u>SEPTEMBER 18TH, 2021</u>
+        </span>
+        <span class="block text-title-primary-color">
+          SEATTLE, WASHINGTON
+        </span>
+      </div>
+    </div>
+
+    <!-- NEWSLETTER BLOCK -->
+    <div class="col-span-3 bg-white bg-opacity-40 p-5 rounded">
+      <div class="flex flex-col items-center text-4xl font-emphasis font-medium">
+        <span class="block text-title-primary-color mb-1 tracking-wide">
+          NEWSLETTER
+        </span>
+        <form 
+          action="https://honkfestwest.us4.list-manage.com/subscribe/post?u=ef3f62323075a304e4a1428e3&amp;id=b6e69bd855" 
+          method="post" 
+          id="mc-embedded-subscribe-form" 
+          name="mc-embedded-subscribe-form" 
+          class="w-full p-0 m-0" 
+          target="_blank" 
+          novalidate="">
+
+          <div id="mc_embed_signup_scroll" class="
+              flex
+              flex-col
+              justify-center
+              items-center
+              w-full
+            ">
+            <div class="
+                mc-field-group
+                hidden md:flex
+                w-full
+                mb-2
+                justify-center
+                items-center
+              ">
+              <label class="text-title-secondary-color mr-2 mb-0 block text-center" for="mce-EMAIL">
+                EMAIL
+              </label>
+              <input type="email" value="" name="EMAIL" class="bg-white bg-opacity-60 block w-full font-base text-lg px-2 py-1" id="mce-EMAIL">
+            </div>
+            <div id="mce-responses" class="clear">
+              <div class="hidden" id="mce-error-response"></div>
+              <div class="hidden" id="mce-success-response"></div>
+            </div>
+            <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+            <div style="position: absolute; left: -5000px" aria-hidden="true">
+              <input type="text" name="b_ef3f62323075a304e4a1428e3_b6e69bd855" tabindex="-1" value="">
+            </div>
+
+            <input 
+              type="submit" 
+              value="Subscribe" 
+              name="subscribe" 
+              id="mc-embedded-subscribe" 
+              class="border-2 border-title-secondary-color rounded font-base text-lg px-2 py-1">
+          </div>
+        </form>
+      </div>
+    </div>
+
+    <!-- POSTS -->
+    <div class="col-span-6 bg-white bg-opacity-40 p-5"></div>
+  </div>
   <Footer slot="footer" />
 </BaseLayout>
 
