--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -6,7 +6,7 @@
     <slot name="head" />
   </head>
 
-  <body class="font-sans antialiased text-gray-600 min-h-full flex flex-col">
+  <body class="min-h-full flex flex-col">
 
     <!-- BACKGROUND IMAGE -->
     <div class="w-full h-full z-0 fixed top-0 left-0">
