--- a/src/components/PostBlurb.astro
+++ b/src/components/PostBlurb.astro
@@ -11,20 +11,20 @@ const {post} = Astro.props;
 </style>
 
 <div>
-	<h1 class="text-3xl font-title border-b-4 border-opacity-60 border-accent-color border-dotted mb-3">
+	<h1 class="title">
 		<span class="text-title-primary-color pr-3">
 			{post.title}
 		</span>
-		<span class="text-title-secondary-color">
+		<span class="text-gray-500">
 			{post.subtitle}
 		</span>
 	</h1>
 
 	<div class="flex">
-		<a class="block w-1/4 flex-none mr-5" href={post.url}>
+		<a class="block w-1/4 flex-none mr-5" href={post.external_url || post.astro.url}>
 			<img class="w-full border-2 border-accent-color" src={post.image_url} alt={`${post.title} ${post.subtitle}`}/>
 		</a>
-		<div class="font-base antialiased text-main-color-800 leading-7 text-lg">
+		<div class="font-base antialiased text-gray-600 leading-7 text-lg">
 			<Markdown content={post.astro.source} />
 		</div>
 	</div>
