--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,6 +4,7 @@ import Head from '@components/BaseHead.astro'
 import Header from '@components/Header.astro'
 import Footer from '@components/Footer.astro'
 import PostBlurb from '@components/PostBlurb.astro'
+import LinkBlurb from '@components/LinkBlurb.astro'
 
 const title = 'Home';
 
@@ -16,7 +17,7 @@ const posts = Astro.fetchContent('@pages/post/*.md');
   <div class="grid grid-cols-6 gap-4 w-full">
 
     <!-- INFO BLOCK -->
-    <div class="col-span-3 bg-white bg-opacity-40 p-5 rounded">
+    <div class="col-span-3 content-container">
       <div class="flex flex-col items-center text-4xl font-emphasis font-medium tracking-wide">
         <span class="block text-title-primary-color mb-1">
           HONK! FEST WEST
@@ -31,7 +32,7 @@ const posts = Astro.fetchContent('@pages/post/*.md');
     </div>
 
     <!-- NEWSLETTER BLOCK -->
-    <div class="col-span-3 bg-white bg-opacity-40 p-5 rounded">
+    <div class="col-span-3 content-container">
       <div class="flex flex-col items-center text-4xl font-emphasis font-medium">
         <span class="block text-title-primary-color mb-1 tracking-wide">
           NEWSLETTER
@@ -47,7 +48,7 @@ const posts = Astro.fetchContent('@pages/post/*.md');
 
           <div id="mc_embed_signup_scroll" class="flex flex-col justify-center items-center w-full">
             <div class="hidden md:flex w-full mb-2 justify-center items-center">
-              <label class="text-title-secondary-color mr-2 mb-0 block text-center" for="mce-EMAIL">
+              <label class="text-gray-500 mr-2 mb-0 block text-center" for="mce-EMAIL">
                 EMAIL
               </label>
               <input type="email" value="" name="EMAIL" class="bg-white bg-opacity-60 block w-full font-base text-lg px-2 py-1" id="mce-EMAIL">
@@ -66,18 +67,43 @@ const posts = Astro.fetchContent('@pages/post/*.md');
               value="Subscribe" 
               name="subscribe" 
               id="mc-embedded-subscribe" 
-              class="border-2 border-title-secondary-color rounded font-base text-lg px-2 py-1">
+              class="border-2 border-gray-400 text-gray-600 rounded font-base text-lg px-2 py-1">
           </div>
         </form>
       </div>
     </div>
 
-    <!-- POSTS -->
+    <!-- POST BLURBS -->
     {posts.map((post) => (
-      <article class="col-span-6 bg-white bg-opacity-40 p-5">
+      <article class="col-span-6 content-container">
         <PostBlurb post={post}/>
       </article>
     ))}
+
+    <!-- LINK BLURBS -->
+    <div class="col-span-2 content-container">
+      <LinkBlurb title="About" href="/about">
+        HONK! Fest West is an accessible community music festival 
+        driven by the energetic performances of street bands in public spaces.
+      </LinkBlurb>
+    </div>
+    <div class="col-span-2 content-container">
+      <LinkBlurb title="Volunteer" href="/volunteer">
+        If you want to volunteer, and help make HONK! Fest West magic, please 
+        <a class="text-accent-color font-bold" href="https://docs.google.com/forms/d/e/1FAIpQLSe78LKnwYFWr8yw2faj7vuslfeUfC9kgvy9ssm_DT_30i4zFA/viewform">
+          APPLY HERE
+        </a>
+        and Thank You!!
+      </LinkBlurb>
+    </div>
+    <div class="col-span-2 content-container">
+      <LinkBlurb title="Donate" href="/donate">
+        Your contributions help make this event possible. 
+        Through the generous efforts of our shared community, 
+        we’ll keep bringing music to the streets and parks of Seattle’s neighborhoods.
+      </LinkBlurb>
+    </div>
+
   </div>
   <Footer slot="footer" />
 </BaseLayout>
