Home | Support Duamish

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -104,6 +104,19 @@ const posts = Astro.fetchContent('@pages/post/*.md');
       </LinkBlurb>
     </div>
 
+    <!-- SUPPORT DUAMISH  -->
+    <div class="col-span-6 content-container">
+      <p class="font-base text-gray-700 italic">
+        H!FW acknowledges that we are on the traditional land of the first people of Seattle
+        — the Duwamish People past and present — and honor with gratitude the land itself,
+        the Duwamish Tribe, and the Coast Salish people.
+      </p>
+      <br/>
+      <a class="font-base link text-accent-color font-bold text-lg" href="https://www.duwamishtribe.org/donate">
+        » Please support the Duwamish Tribe
+      </a>
+    </div>
+
   </div>
   <Footer slot="footer" />
 </BaseLayout>
