--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -20,12 +20,12 @@
     </header>
 
     <!-- MAIN -->
-	  <main class="z-10 max-w-screen-lg my-8 w-full mx-auto">
+	  <main class="z-10 max-w-screen-xl my-8 px-4 w-full mx-auto">
 		  <slot />
 	  </main>
 
     <!-- FOOTER -->
-    <footer class="z-10">
+    <footer class="z-10 mt-auto">
 	    <slot name="footer" />
     </footer>
   </body>
