--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,21 +1,13 @@
 ---
 import BaseLayout from '@layouts/BaseLayout.astro'
-import Head from '@components/BaseHead.astro'
-import Header from '@components/Header.astro'
-import Footer from '@components/Footer.astro'
 import PostBlurb from '@components/PostBlurb.astro'
 import LinkBlurb from '@components/LinkBlurb.astro'
-
-import Slideshow from '../components/Slideshow.astro'
-
-const title = 'Home';
+import Slideshow from '@components/Slideshow.astro'
 
 const posts = Astro.fetchContent('@pages/post/*.md');
 ---
 
-<BaseLayout>
-  <Head slot="head" title={title} />
-  <Header slot="header" />
+<BaseLayout title="Home">
   <div class="grid grid-cols-6 gap-4 w-full">
 
     <!-- INFO BLOCK -->
@@ -119,11 +111,11 @@ const posts = Astro.fetchContent('@pages/post/*.md');
       </a>
     </div>
 
+    <!-- SLIDESHOW -->
     <div class="col-span-6 content-container">
       <Slideshow client:visible />
     </div>
 
   </div>
-  <Footer slot="footer" />
 </BaseLayout>
 
