--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,9 +1,19 @@
+---
+import Head from '@components/BaseHead.astro'
+import Header from '@components/Header.astro'
+import Footer from '@components/Footer.astro'
+
+const { title } = Astro.props;
+---
+
 <!DOCTYPE html>
 <html lang="en">
 
   <!-- HEAD -->
   <head>
-    <slot name="head" />
+    <Head title={title}>   
+      <slot name="head" />
+    </Head>
   </head>
 
   <body class="min-h-full flex flex-col">
@@ -16,7 +26,7 @@
 
     <!-- HEADER -->
     <header class="z-10">
-	    <slot name="header" />
+      <Header />
     </header>
 
     <!-- MAIN -->
@@ -26,7 +36,7 @@
 
     <!-- FOOTER -->
     <footer class="z-10 mt-auto">
-	    <slot name="footer" />
+      <Footer />
     </footer>
   </body>
 
