Volunteer | Create Volunteer page

--- a/public/style/global.css
+++ b/public/style/global.css
@@ -10,6 +10,14 @@
   @apply text-3xl font-title border-b-4 border-opacity-60 border-accent-color border-dotted mb-3;
 }
 
-.content {
+.content,
+p {
   @apply font-base antialiased text-gray-700 leading-7 text-lg flex-1;
+}
+.content ul {
+  @apply pl-10 list-disc;
+}
+.content a,
+p a {
+  @apply text-accent-color font-bold;
 }
