--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -10,7 +10,7 @@ const golden_dino = true;
 
   <!-- SPONSORS -->
   <div class="border-t-4 border-b-4 border-main-color-600 bg-main-color-500 bg-opacity-40">
-    <div class="max-w-screen-xl w-full mx-auto p-4 grid grid-cols-3 gap-4">
+    <div class="max-w-screen-xl w-full mx-auto py-4 px-6 grid grid-cols-3 gap-4">
 
       <!-- MEDIA SPONSOR -->
       <div class="flex flex-col items-center">
