--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -10,10 +10,10 @@ const golden_dino = true;
 
   <!-- SPONSORS -->
   <div class="border-t-4 border-b-4 border-main-color-600 bg-main-color-500 bg-opacity-40">
-    <div class="max-w-screen-xl w-full mx-auto py-4 px-6 grid grid-cols-3 gap-4">
+    <div class="max-w-screen-xl w-full mx-auto py-4 px-6 flex">
 
       <!-- MEDIA SPONSOR -->
-      <div class="flex flex-col items-center">
+      <div class="flex flex-col items-center w-1/3">
         <h3 class="font-emphasis text-main-color-800 text-3xl">MEDIA SPONSOR</h3>
         <a href="{ sponsors.kuow.link }" target="_blank">
           <img
@@ -25,7 +25,7 @@ const golden_dino = true;
       </div>
 
       <!-- SHUNPIKE -->
-      <div class="flex flex-col items-center">
+      <div class="flex flex-col items-center w-1/3">
         <a href="{ sponsors.shunpike.link }" target="_blank">
           <img
             src="{ sponsors.shunpike.image }"
@@ -44,7 +44,7 @@ const golden_dino = true;
       </div>
 
       <!-- SPONSORS -->
-      <div class="flex flex-col items-center">
+      <div class="flex flex-col items-center w-1/3">
         <h3 class="font-emphasis text-main-color-800 text-3xl">SPONSORS</h3>
         <a class="block mt-2 mb-3" href="{ sponsors.neighborhoods.link }" target="_blank">
           <img
@@ -71,18 +71,18 @@ const golden_dino = true;
   </div>
 
   <!-- BOTTOM -->
-  <div class="max-w-screen-xl w-full mx-auto p-4 grid grid-cols-3 gap-4">
-    <a class="w-full text-center text-main-color-700 text-lg font-bold font-base" href="{ '/' }"
+  <div class="max-w-screen-xl w-full mx-auto p-4 flex">
+    <a class="w-full text-center text-main-color-700 text-lg font-bold font-base block w-1/3" href="/"
       >© 2021 HONK! Fest West</a
     >
-    <ul class="flex justify-around items-center h-full flex-1">
+    <ul class="flex justify-around items-center h-full flex-1 w-1/3">
       {Object.keys(navigation.social).map((item) => (
         <li class="text-main-color-700">
           <SocialLinks link={item} size="1.25rem"/>
         </li>
       ))}
     </ul>
-    <a class="w-full text-center font-base link text-accent-color font-bold text-lg" href="#">
+    <a class="w-full text-center font-base link text-accent-color font-bold text-lg block w-1/3" href="#">
       Back to top
     </a>
   </div>
