Sponsors | Create Sponsors Page

--- a/src/pages/volunteer.astro
+++ b/src/pages/volunteer.astro
@@ -1,6 +1,6 @@
 ---
-import {Markdown} from 'astro/components';
-import YAML from 'yaml';
+import {Markdown} from 'astro/components'
+import YAML from 'yaml'
 import BaseLayout from '@layouts/BaseLayout.astro'
 import Title from '@components/Title.astro'
 
