--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -9,8 +9,8 @@ const activeLink = (link) => {
 ---
 
 <!-- H!FW LOGO -->
-<div class="flex justify-center mt-12 mb-8">
-	<a class="block mx-auto w-4/5 md:w-1/3" href="/">
+<div class="flex justify-center mt-12 mb-4 sm:mb-8 w-full">
+	<a class="block mx-auto w-4/5 sm:w-2/3 lg:w-2/5" href="/">
 		<img
 			class="w-full h-full"
 			src="https://ik.imagekit.io/thegoldendino/hfw/festival/2021/logo-2021_nVNOHonr9.svg?updatedAt=1628273241588"
@@ -19,25 +19,33 @@ const activeLink = (link) => {
 	</a>
 </div>
 
-<nav>
-	<ul class="flex justify-center items-center">
+<nav class="w-full">
+	<ul class="flex flex-wrap justify-center items-center w-full">
 
 		<!-- MAIN NAV -->
 		{navigation.main.map((item) => (
-			<li class="text-3xl text-main-color-700 font-title flex items-center">
+			<li class="text-2xl sm:text-3xl text-main-color-700 font-title flex items-center my-2">
 				<a
-					class={`mx-2 block ${activeLink(item.link)}`}
+					class={`mx-4 sm:mx-2 block ${activeLink(item.link)}`}
 					href={ item.link }
 				>{ item.name }</a>
-				<span class="mx-2 block h-9">&#8226;</span>
+
+				<span class="mx-2 hidden sm:block h-9">&#8226;</span>
 			</li>
 		))}
 
 		<!-- SOCIAL NAV -->
-		{Object.keys(navigation.social).map((item) => (
-			<li class="text-2xl text-main-color-700 px-1 h-9">
-				<SocialLinks link={item} size="1.875rem" />
-			</li>
-		))}
+		<li class="text-2xl text-main-color-700 ml-2 my-2 flex">
+			{Object.keys(navigation.social).map((item) => (
+				<div>
+					<div class="hidden sm:block px-1 h-9">
+						<SocialLinks link={item} size="1.875rem" />
+					</div>
+					<div class="block sm:hidden px-1 h-7">
+						<SocialLinks link={item} size="1.5rem" />
+					</div>
+				</div>
+			))}
+		</li>
 	</ul>
 </nav>
