--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -16,28 +16,30 @@ const { title } = Astro.props;
     </Head>
   </head>
 
-  <body class="min-h-full flex flex-col">
+  <body class="min-h-full">
 
     <!-- BACKGROUND IMAGE -->
-    <div class="w-full h-full z-0 fixed top-0 left-0">
+    <div class="w-full h-full fixed top-0 left-0">
 	    <div class="bg-rainier bg-cover bg-center opacity-40 w-full h-full fixed top-0 left-0"></div>
-	    <div class="bg-main-color-400 bg-opacity-60 w-full h-full fixed top-0 left-0"></div>
+	    <div class="bg-gradient-to-b from-main-color-200 to-main-color-600 opacity-60 w-full h-full fixed top-0 left-0"></div>
     </div>
 
-    <!-- HEADER -->
-    <header class="z-10">
-      <Header />
-    </header>
+    <div class="w-full h-full absolute top-0 left-0">
+      <!-- HEADER -->
+      <header class="w-full px-6">
+        <Header />
+      </header>
 
-    <!-- MAIN -->
-	  <main class="z-10 max-w-screen-xl my-8 px-6 w-full mx-auto">
-		  <slot />
-	  </main>
+      <!-- MAIN -->
+      <main class="max-w-screen-xl my-4 sm:my-8 px-6 w-full mx-auto">
+        <slot />
+      </main>
 
-    <!-- FOOTER -->
-    <footer class="z-10 mt-auto">
-      <Footer />
-    </footer>
+      <!-- FOOTER -->
+      <footer class="mt-auto w-full">
+        <Footer />
+      </footer>
+    </div>
   </body>
 
 </html>
