Home | Add responsive Sty les

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -31,7 +31,7 @@ const { title } = Astro.props;
       </header>
 
       <!-- MAIN -->
-      <main class="max-w-screen-xl my-4 sm:my-8 px-6 w-full mx-auto">
+      <main class="max-w-screen-xl my-4 sm:my-8 px-3 sm:px-6 w-full mx-auto">
         <slot />
       </main>
 
