--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -9,7 +9,7 @@ const activeLink = (link) => {
 ---
 
 <!-- H!FW LOGO -->
-<div class="flex justify-center mt-12 mb-4 sm:mb-8 w-full">
+<div class="flex justify-center mt-6 sm:mt-12 mb-4 sm:mb-8 w-full">
 	<a class="block mx-auto w-4/5 sm:w-2/3 lg:w-2/5" href="/">
 		<img
 			class="w-full h-full"
