--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,7 +12,7 @@ const posts = Astro.fetchContent('@pages/post/*.md');
 
     <!-- INFO BLOCK -->
     <div class="sm:col-span-3 content-container">
-      <div class="flex flex-col items-center text-4xl font-emphasis font-medium tracking-wide">
+      <div class="flex flex-col items-center text-3xl sm:text-4xl font-emphasis font-medium tracking-wide">
         <span class="block text-title-primary-color mb-1 text-center">
           HONK! FEST WEST
         </span>
@@ -27,7 +27,7 @@ const posts = Astro.fetchContent('@pages/post/*.md');
 
     <!-- NEWSLETTER BLOCK -->
     <div class="sm:col-span-3 content-container">
-      <div class="flex flex-col items-center text-4xl font-emphasis font-medium">
+      <div class="flex flex-col items-center text-3xl sm:text-4xl font-emphasis font-medium">
         <span class="block text-title-primary-color mb-1 tracking-wide">
           NEWSLETTER
         </span>
@@ -61,7 +61,7 @@ const posts = Astro.fetchContent('@pages/post/*.md');
               value="Subscribe" 
               name="subscribe" 
               id="mc-embedded-subscribe" 
-              class="border-2 border-gray-400 text-gray-600 rounded font-base text-lg px-2 py-1">
+              class="border-2 border-gray-400 text-gray-600 rounded font-base text-base sm:text-lg px-2 py-1">
           </div>
         </form>
       </div>
