--- a/public/style/global.css
+++ b/public/style/global.css
@@ -3,19 +3,19 @@
 @tailwind utilities;
 
 .content-container {
-  @apply bg-white bg-opacity-50 p-5 rounded shadow-md;
+  @apply bg-white bg-opacity-50 p-3 sm:p-5 rounded shadow-md;
 }
 
 .title {
-  @apply text-3xl font-title border-b-4 border-opacity-60 border-accent-color border-dotted mb-3;
+  @apply text-2xl sm:text-3xl font-title border-b-4 border-opacity-60 border-accent-color border-dotted mb-3;
 }
 
 .content,
 p {
-  @apply font-base antialiased text-gray-700 leading-7 text-lg flex-1;
+  @apply font-base antialiased text-gray-700 leading-7 text-base sm:text-lg flex-1;
 }
 .content ul {
-  @apply pl-10 list-disc;
+  @apply pl-5 sm:pl-10 list-disc;
 }
 .content a,
 p a {
