--- a/src/components/LinkBlurb.astro
+++ b/src/components/LinkBlurb.astro
@@ -7,10 +7,10 @@ const {title="", href="#"} = Astro.props
 
 <div class="flex flex-col justify-between h-full">
 	<Title title={title} classes="text-center"/>
-	<p class="font-base antialiased text-gray-700 leading-7 text-lg flex-1">
+	<p class="content flex-1">
 		<slot/>
 	</p>
-	<a class="block font-base antialiased text-lg text-accent-color font-bold flex-none mt-3" href={href}>
+	<a class="block font-base antialiased text-base sm:text-lg text-accent-color font-bold flex-none mt-3" href={href}>
 		» Read More
 	</a>
 </div>
