--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -100,13 +100,13 @@ const posts = Astro.fetchContent('@pages/post/*.md');
 
     <!-- SUPPORT DUAMISH  -->
     <div class="sm:col-span-6 content-container">
-      <p class="font-base text-gray-700 italic">
+      <p class="content font-base text-gray-700 italic">
         H!FW acknowledges that we are on the traditional land of the first people of Seattle
         — the Duwamish People past and present — and honor with gratitude the land itself,
         the Duwamish Tribe, and the Coast Salish people.
       </p>
       <br/>
-      <a class="font-base link text-accent-color font-bold text-lg" href="https://www.duwamishtribe.org/donate">
+      <a class="font-base link text-accent-color font-bold text-base sm:text-lg" href="https://www.duwamishtribe.org/donate">
         » Please support the Duwamish Tribe
       </a>
     </div>
