--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -10,52 +10,28 @@ const golden_dino = true;
 
   <!-- SPONSORS -->
   <div class="border-t-4 border-b-4 border-main-color-600 bg-main-color-500 bg-opacity-40">
-    <div class="max-w-screen-xl w-full mx-auto py-4 px-6 flex">
-
-      <!-- MEDIA SPONSOR -->
-      <div class="flex flex-col items-center w-1/3">
-        <h3 class="font-emphasis text-main-color-800 text-3xl">MEDIA SPONSOR</h3>
-        <a href="{ sponsors.kuow.link }" target="_blank">
-          <img
-            src="{ sponsors.kuow.image }"
-            alt="{ sponsors.kuow.name }"
-            style="height: 80px"
-          />
-        </a>
-      </div>
-
-      <!-- SHUNPIKE -->
-      <div class="flex flex-col items-center w-1/3">
-        <a href="{ sponsors.shunpike.link }" target="_blank">
-          <img
-            src="{ sponsors.shunpike.image }"
-            alt="{ sponsors.shunpike.name }"
-            class="rounded mx-auto block p-2 h-20 bg-[#f4efdf]"
-          />
-        </a>
-        <p class="text-center text-sm text-main-color-800 mt-2">
-          HONK! Fest West is fiscally sponsored by Shunpike.<br />
-          <b>About Shunpike</b><br />
-          Shunpike is the 501(c)(3) non-profit agency that provides independent
-          arts groups in Washington State with the services, resources, and
-          opportunities they need to forge their own paths to sustainable
-          success.
-        </p>
-      </div>
+    <div class="max-w-screen-xl w-full mx-auto pt-3 px-3 sm:py-4 sm:px-6 flex flex-wrap sm:flex-nowrap">
 
       <!-- SPONSORS -->
-      <div class="flex flex-col items-center w-1/3">
-        <h3 class="font-emphasis text-main-color-800 text-3xl">SPONSORS</h3>
-        <a class="block mt-2 mb-3" href="{ sponsors.neighborhoods.link }" target="_blank">
-          <img
-            src="{ sponsors.neighborhoods.image }"
-            alt="{ sponsors.neighborhoods.name }"
-            class="mx-auto block rounded p-2 h-24 bg-white"
-          />
-        </a>
-        <div class="flex flex-wrap justify-around">
+      <div class="flex flex-col items-center w-full sm:w-1/2 mb-2 sm:mb-0">
+        <h3 class="font-emphasis text-main-color-800 text-2xl sm:text-3xl">SPONSORS</h3>
+        <div class="flex flex-wrap justify-center sm:w-3/4 items-center">
+          <a class="block mb-3 mx-2" href="{ sponsors.neighborhoods.link }" target="_blank">
+            <img
+              src="{ sponsors.neighborhoods.image }"
+              alt="{ sponsors.neighborhoods.name }"
+              class="mx-auto block rounded p-2 h-12 sm:h-16 bg-white"
+            />
+          </a>
+          <a class="block mb-3 mx-2" href="{ sponsors.kuow.link }" target="_blank">
+            <img
+              src="{ sponsors.kuow.image }"
+              alt="{ sponsors.kuow.name }"
+              class="h-12 sm:h-16"
+            />
+          </a>
           {sponsors.arts.map((sponsor) => (
-            <div class="mx-2">
+            <div class="mx-2 mb-3">
               <a href="{ sponsor.link }" target="_blank" class="rounded bg-white p-1 block">
                 <img
                   src="{ sponsor.image }"
@@ -67,22 +43,41 @@ const golden_dino = true;
           ))}
         </div>
       </div>
+
+      <!-- SHUNPIKE -->
+      <div class="flex flex-col items-center w-full sm:w-1/2 mb-5">
+        <a href="{ sponsors.shunpike.link }" target="_blank">
+          <img
+            src="{ sponsors.shunpike.image }"
+            alt="{ sponsors.shunpike.name }"
+            class="rounded mx-auto block p-2 h-16 sm:h-20 bg-[#f4efdf]"
+          />
+        </a>
+        <p class="text-center text-xs sm:text-sm text-main-color-800 mt-2 w-3/4">
+          HONK! Fest West is fiscally sponsored by Shunpike.<br />
+          <b>About Shunpike</b><br />
+          Shunpike is the 501(c)(3) non-profit agency that provides independent
+          arts groups in Washington State with the services, resources, and
+          opportunities they need to forge their own paths to sustainable
+          success.
+        </p>
+      </div>
     </div>
   </div>
 
   <!-- BOTTOM -->
-  <div class="max-w-screen-xl w-full mx-auto p-4 flex">
-    <a class="w-full text-center text-main-color-700 text-lg font-bold font-base block w-1/3" href="/"
+  <div class="max-w-screen-xl w-full mx-auto p-1 sm:p-0 flex flex-wrap sm:flex-nowrap items-center">
+    <a class="w-full text-center text-main-color-700 text-lg font-bold font-base block w-full sm:w-1/3 m-1 sm:m-4" href="/"
       >© 2021 HONK! Fest West</a
     >
-    <ul class="flex justify-around items-center h-full flex-1 w-1/3">
+    <ul class="items-center h-full flex-1 w-full sm:w-1/3 m-1 sm:m-4 hidden sm:flex justify-around ">
       {Object.keys(navigation.social).map((item) => (
         <li class="text-main-color-700">
           <SocialLinks link={item} size="1.25rem"/>
         </li>
       ))}
     </ul>
-    <a class="w-full text-center font-base link text-accent-color font-bold text-lg block w-1/3" href="#">
+    <a class="w-full text-center font-base link text-accent-color font-bold text-lg block w-full sm:w-1/3 m-1 sm:m-4" href="#">
       Back to top
     </a>
   </div>
