--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -75,13 +75,13 @@ const posts = Astro.fetchContent('@pages/post/*.md');
     ))}
 
     <!-- LINK BLURBS -->
-    <div class="sm:col-span-2 content-container">
+    <div class="sm:col-span-6 md:col-span-2 content-container">
       <LinkBlurb title="About" href="/about">
         HONK! Fest West is an accessible community music festival 
         driven by the energetic performances of street bands in public spaces.
       </LinkBlurb>
     </div>
-    <div class="sm:col-span-2 content-container">
+    <div class="sm:col-span-6 md:col-span-2 content-container">
       <LinkBlurb title="Volunteer" href="/volunteer">
         If you want to volunteer, and help make HONK! Fest West magic, please 
         <a class="text-accent-color font-bold" href="https://docs.google.com/forms/d/e/1FAIpQLSe78LKnwYFWr8yw2faj7vuslfeUfC9kgvy9ssm_DT_30i4zFA/viewform">
@@ -90,7 +90,7 @@ const posts = Astro.fetchContent('@pages/post/*.md');
         and Thank You!!
       </LinkBlurb>
     </div>
-    <div class="sm:col-span-2 content-container">
+    <div class="sm:col-span-6 md:col-span-2 content-container">
       <LinkBlurb title="Donate" href="/donate">
         Your contributions help make this event possible. 
         Through the generous efforts of our shared community, 
