--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -11,10 +11,10 @@ import family from '@data/honk-family.json'
 <BaseLayout title="About">
 
 	<!-- WHO -->
-	<article class="content-container mb-6">
+	<article class="content-container mb-3 sm:mb-6">
 		<Title title="Who" subtitle="is HONK! Fest West?"/>
-		<div class="flex w-full">
-			<img class="mr-5" src="https://ik.imagekit.io/thegoldendino/hfw/henryart_0A59z8KGn.png?updatedAt=1628230159141" alt="Henry Art for H!FW" />
+		<div class="flex w-full flex-wrap md:flex-nowrap">
+			<img class="block w-full md:w-auto md:mr-5 mb-3 sm:mb-0" src="https://ik.imagekit.io/thegoldendino/hfw/henryart_0A59z8KGn.png?updatedAt=1628230159141" alt="Henry Art for H!FW" />
 			<p class="content">
 				HONK! Fest West is a non-profit organization dedicated to the activation of public space through energetic musical performance; we are part of a global renaissance of street band culture. HONK! Fest West works to break down systemic barriers to inclusion for those underrepresented within our community and underserved by arts in our region.
 				<br/><br/>
@@ -24,7 +24,7 @@ import family from '@data/honk-family.json'
 	</article>
 
 	<!-- WHAT -->
-	<article class="content-container mb-6">
+	<article class="content-container mb-3 sm:mb-6">
 		<Title title="What" subtitle="is HONK! Fest West?"/>
 		<p class="content">
 			HONK! Fest West is a free, three-day, community-supported music festival devoted to marching bands, drum corps, samba lines, and anything acoustic and mobile that makes a ruckus. This immersive festival occurs annually in June, and is 100% volunteer-run, performed, and organized. HONK! is on every continent; with Seattle’s festival occurring since 2008.			
@@ -32,7 +32,7 @@ import family from '@data/honk-family.json'
 	</article>
 
 	<!-- WHEN -->
-	<article class="content-container mb-6">
+	<article class="content-container mb-3 sm:mb-6">
 		<Title title="When" subtitle="is HONK! Fest West?"/>
 		<p class="content">
 			HONK! Fest West occurs annually on the 2nd week of June. We were not able to celebrate in 2020, because...ALIENS!!! In 2021, we are once again unable to hold the festival in June; however, we are hoping against all odds to have something in store for the fall of 2021. We will follow the science and recommendations. Stay tuned here!
@@ -40,7 +40,7 @@ import family from '@data/honk-family.json'
 	</article>
 
 	<!-- WHERE -->
-	<article class="content-container mb-6">
+	<article class="content-container mb-3 sm:mb-6">
 		<Title title="Where" subtitle="is HONK! Fest West?"/>
 		<p class="content">
 			HONK! Fest West occurs in the public spaces of the Seattle area. We are found in the streets and parks. We are found under bridges and on rooftops. We are found in parades marching down your street. We have called Georgetown our home since the festival’s inception, and have also celebrated in Columbia City, White Center, South Park, The Waterfront, Fremont/Gas Works Park, Capitol Hill, Central District, Pioneer Square, Downtown, Seattle Center, and West Seattle.
@@ -48,7 +48,7 @@ import family from '@data/honk-family.json'
 	</article>
 
 	<!-- WHY -->
-	<article class="content-container mb-6">
+	<article class="content-container mb-3 sm:mb-6">
 		<Title title="Why" subtitle="is HONK! Fest West?"/>
 		<p class="content">
 			HONK! Fest West activates public space to make communities stronger and more connected. The raucously engaging performances provide the universal benefits of celebrating music together with no limitations arising from age, race, gender identity, cultural background, ethnic and indigenous identity, native language, immigration status, ability, religion, education, socioeconomic status, or sexual orientation. HONK! Fest West focuses on cooperative values; participatory culture; breaking down barriers to music and art; introduction to different cultural traditions through music; and the key tenet that anyone can be a part of the experience.		
@@ -56,7 +56,7 @@ import family from '@data/honk-family.json'
 	</article>
 
 	<!-- HOW -->
-	<article class="content-container mb-6">
+	<article class="content-container mb-3 sm:mb-6">
 		<Title title="How" subtitle="is HONK! Fest West?"/>
 		<p class="content">
 			We are a completely volunteer-run organization and festival and are currently recruiting Committee Members to fill key roles on our Organizing Committee. We are also seeking non-Committee level roles to help out year-round. If you are interested, head over to our Volunteers page to see some specific roles or just send an email to 
@@ -66,9 +66,9 @@ import family from '@data/honk-family.json'
 
 	<!-- HONK! FAMILY -->
 	{Object.keys(family).map((continent) => (
-		<article class="content-container mb-6">
+		<article class="content-container mb-3 sm:mb-6">
 			<Title title={`HONK! Family - ${continent}`} classes="text-center"/>
-			<div class="grid grid-cols-2 gap-7 w-full content my-5">
+			<div class="grid grid-cols-1 sm:grid-cols-2 gap-3 sm:gap-7 w-full content my-4 sm:my-5">
 				{family[continent].map((honk) => (
 					<a class="text-accent-color font-bold block w-full text-center" href={honk.url}>
 						<span>{honk.name}</span>	
