--- a/src/pages/volunteer.astro
+++ b/src/pages/volunteer.astro
@@ -10,8 +10,8 @@ const positions = await YamlParser(`${Astro.request.url.origin}${positionsPathna
 ---
 
 <BaseLayout title="Volunteer">
-	<div class="flex">
-		<div class="w-1/3 pr-3">
+	<div class="flex flex-wrap md:flex-nowrap">
+		<div class="w-full md:w-1/3 md:pr-3 mb-3">
 			<div class="content-container">
 				<Title title="Sign Up" classes="text-center" />
 				<img class="w-2/3 mx-auto my-4 border-8 border-accent-color rounded border-opacity-60" src="https://ik.imagekit.io/thegoldendino/hfw/people/katie_OjdCeHQls.jpeg?updatedAt=1628536067049" alt="Katie our Volunteer Coordinator"/>
@@ -25,8 +25,8 @@ const positions = await YamlParser(`${Astro.request.url.origin}${positionsPathna
 			
 			</div>
 		</div>
-		<div class="w-2/3 pl-3">
-			<div class="content-container mb-6">
+		<div class="w-full md:w-2/3 md:pl-3">
+			<div class="content-container mb-3 sm:mb-6">
 				<Title title="HONK! Fest West" subtitle="NEEDS YOU!!!"/>
 				<div class="content">
 					<Markdown>
@@ -39,7 +39,7 @@ const positions = await YamlParser(`${Astro.request.url.origin}${positionsPathna
 			</div>
 
 			{Object.keys(positions).map((position) => (
-				<div class="content-container mb-6">
+				<div class="content-container mb-3 sm:mb-6">
 					<Title title={position} subtitle={positions[position].type.length ? `| ${positions[position].type}` : ''} />
 					<p>
 						<Markdown content={positions[position].description}/>
