--- a/src/pages/donate.astro
+++ b/src/pages/donate.astro
@@ -5,8 +5,8 @@ import Title from '@components/Title'
 ---
 
 <BaseLayout title="Donate">
-	<div class="flex">
-		<div class="w-1/3 pr-3">
+	<div class="flex flex-wrap md:flex-nowrap">
+		<div class="w-full md:w-1/3 md:pr-3 mb-3">
 			<div class="content-container">
 				<Title title="Donate" subtitle="Here" classes="text-center"/>
 				<a href="https://poweredbyshunpike.org/c/PBS/a/honkfestwest" class="block">
@@ -14,7 +14,7 @@ import Title from '@components/Title'
 				</a>
 			</div>
 		</div>
-		<div class="w-2/3 pl-3">
+		<div class="w-full md:w-2/3 md:pl-3">
 			<div class="content-container">
 				<div class="content">
 					<Markdown>
