--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,7 +1,7 @@
 ---
 import SocialLinks from '@components/SocialLinks'
 
-import navigation from '@data/navigation.json';
+import navigation from '@data/navigation.json'
 
 const activeLink = (link) => {
 	return Astro.request.url.pathname === link ? 'text-accent-color' : ''	
