--- a/src/pages/volunteer.astro
+++ b/src/pages/volunteer.astro
@@ -3,10 +3,8 @@ import {Markdown} from 'astro/components'
 import YAML from 'yaml'
 import BaseLayout from '@layouts/BaseLayout.astro'
 import Title from '@components/Title.astro'
-import YamlParser from '@lib/utils/yaml-parser.js'
 
-import positionsPathname from '@data/volunteer-positions.yml'
-const positions = await YamlParser(`${Astro.request.url.origin}${positionsPathname}`)
+import positions from '@data/volunteer-positions.json'
 ---
 
 <BaseLayout title="Volunteer">
