Slideshow | Responsive rendering

--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -1,8 +1,8 @@
 ---
-import Google from '@components/BaseHead/Google.astro'
-import MailChimp from '@components/BaseHead/MailChimp.astro'
-import OpenGraph from '@components/BaseHead/OpenGraph.astro'
-import Fonts from '@components/BaseHead/Fonts.astro'
+import Google from '$components/BaseHead/Google.astro'
+import MailChimp from '$components/BaseHead/MailChimp.astro'
+import OpenGraph from '$components/BaseHead/OpenGraph.astro'
+import Fonts from '$components/BaseHead/Fonts.astro'
 
 const { title = '' } = Astro.props;
 ---
