--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,5 +1,5 @@
 ---
-import SocialLinks from '@components/SocialLinks'
+import SocialLinks from '$components/SocialLinks'
 
 import sponsors from '@data/sponsors.json'
 import navigation from '@data/navigation.json';
