--- a/src/pages/sponsors.astro
+++ b/src/pages/sponsors.astro
@@ -1,7 +1,7 @@
 ---
 import {Markdown} from 'astro/components'
 import BaseLayout from '@layouts/BaseLayout.astro'
-import Title from '@components/Title.astro'
+import Title from '$components/Title.astro'
 
 import sponsors from '@data/sponsors.json'
 ---
