--- a/src/pages/volunteer.astro
+++ b/src/pages/volunteer.astro
@@ -2,7 +2,7 @@
 import {Markdown} from 'astro/components'
 import YAML from 'yaml'
 import BaseLayout from '@layouts/BaseLayout.astro'
-import Title from '@components/Title.astro'
+import Title from '$components/Title.astro'
 
 import positions from '@data/volunteer-positions.json'
 ---
