--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,5 +1,5 @@
 ---
-import SocialLinks from '@components/SocialLinks'
+import SocialLinks from '$components/SocialLinks'
 
 import navigation from '@data/navigation.json'
 
