--- a/src/components/PostBlurb.astro
+++ b/src/components/PostBlurb.astro
@@ -1,6 +1,6 @@
 ---
 import { Markdown } from 'astro/components'
-import Title from '@components/Title.astro'
+import Title from '$components/Title.astro'
 
 const {post} = Astro.props;
 ---
