--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,9 +1,9 @@
 ---
 import BaseLayout from '@layouts/BaseLayout.astro'
-import Head from '@components/BaseHead.astro'
-import Header from '@components/Header.astro'
-import Footer from '@components/Footer.astro'
-import Title from '@components/Title'
+import Head from '$components/BaseHead.astro'
+import Header from '$components/Header.astro'
+import Footer from '$components/Footer.astro'
+import Title from '$components/Title'
 
 import family from '@data/honk-family.json'
 ---
