--- a/src/pages/donate.astro
+++ b/src/pages/donate.astro
@@ -1,7 +1,7 @@
 ---
 import {Markdown} from 'astro/components'
 import BaseLayout from '@layouts/BaseLayout.astro'
-import Title from '@components/Title'
+import Title from '$components/Title'
 ---
 
 <BaseLayout title="Donate">
